# DDMOG

./: .gitignore  138.py  CMakeLists.txt  H.txt  README.md  case_study.py  conda-environment.yml  convert.py  create_ddmog_plot.py  create_tikz_diagram.py  ddmog_counter.py  demo.py  disconnected_conjecture.py  echelon_families.py  find_all_ddmogs.py  find_sparsest_ddmog_classes.py  find_sparsest_ddmogs.py  h.py  main.py  order_12_case_study.txt  order_14_ddmog.txt  order_14_disconnected_ddmog.txt  parse_muell_matrices.py  skew.py  waht.txt
138/: order_100_ddmog.txt  order_101_ddmog.txt  order_104_ddmog.txt  order_105_ddmog.txt  order_106_ddmog.txt  order_107_ddmog.txt  order_109_ddmog.txt  order_114_ddmog.txt  order_116_ddmog.txt  order_120_ddmog.txt  order_125_ddmog.txt  order_126_ddmog.txt  order_127_ddmog.txt  order_128_ddmog.txt  order_131_ddmog.txt  order_132_ddmog.txt  order_133_ddmog.txt  order_39_ddmog.txt  order_40_ddmog.txt  order_42_ddmog.txt  order_43_ddmog.txt  order_46_ddmog.txt  order_47_ddmog.txt  order_48_ddmog.txt  order_50_ddmog.txt  order_52_ddmog.txt  order_54_ddmog.txt  order_56_ddmog.txt  order_57_ddmog.txt  order_60_ddmog.txt  order_63_ddmog.txt  order_64_ddmog.txt  order_65_ddmog.txt  order_69_ddmog.txt  order_71_ddmog.txt  order_74_ddmog.txt  order_75_ddmog.txt  order_76_ddmog.txt  order_78_ddmog.txt  order_79_ddmog.txt  (+17 more)
ddm/: __init__.py  checks.py  ddmo_generator.py  ddmog_iterator.py  ddmog_stitcher.py  graphs.py  sagemath.py  text.py
ddmog_counter/: main.cpp
disconnected_conjecture/: order_100_ddmog.txt  order_101_ddmog.txt  (+98 more)
(+185 files in other folders)
